Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127801

Slice view is broken in QML for Bars3D

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.8.0 RC, 6.9.0 FF
    • 6.8.0 Beta3
    • Graphs: 3D
    • None
    • 47baa84b2 (dev), 3efa5d9c6 (6.8), decfc8d6f (dev), e73b538a9 (6.8)

    Description

      The graph does not go to slice view in QML apps.

      Reproducible in bars example with the following change:

      selectionMode: Graphs3D.SelectionFlag.ItemAndRow | Graphs3D.SelectionFlag.Slice 

      Clicking on the Show Expenses / Income / Both seems to trigger the slice view if a row has been selected.

      Same thing happens with the Show 2020 - 2022 button, and if you keep clicking it you will end up with a mess in the slice view (the mess happens only with optimizationHint: Graphs3D.OptimizationHint.Legacy).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            oulu_hillbilly Sami Varanka
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes