Fix BarGraph's slice view not opening

Amends commit 9c62d9f8304043bb43c18e84ebac3518c1bfdd2d

Fixes: QTBUG-127801
Change-Id: I6106ab3f0eed04fe71da4959e8266d877015ba94
Reviewed-by: Kaj Grönholm <kaj.gronholm@qt.io>
Reviewed-by: Sakaria Pouke <sakaria.pouke@qt.io>
(cherry picked from commit decfc8d6f472aaea87e800d4a38c43af38e2280d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>